Bug 134748 - Kazakh locale is not picked up by installer
Summary: Kazakh locale is not picked up by installer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Installation (show other bugs)
Version:
(earliest affected)
7.0.0.1 rc
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-12 14:36 UTC by Baurzhan Muftakhidinov
Modified: 2020-07-13 00:43 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Installation log (2.28 MB, application/x-zip-compressed)
2020-07-12 14:49 UTC, Baurzhan Muftakhidinov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Baurzhan Muftakhidinov 2020-07-12 14:36:25 UTC
Dear team,

I am using licensed Windows 10 Pro 2004 x64, en-US locale by default. I have installed Russian and Kazakh MUI packs.

Now, installer of LibreOffice 7.0 RC does not pick up Kazakh language (checked in Custom Installation list).

It seems like LANG_KAZAKH is missing from  core/setup_native/source/win32/customactions/sellang/sellang.cxx

Could this please be fixed in time for LibreOffice 7.0 release?

Thanks in advance,
Comment 1 Baurzhan Muftakhidinov 2020-07-12 14:49:29 UTC
Created attachment 162923 [details]
Installation log

Archived installation log generated with `msiexec /i LibreOffice_7.0.0.1_Win_x64.msi /l*vx lo-kk-install-log.txt ProductLanguage=1087` is attached.
Comment 2 Mike Kaganski 2020-07-12 15:27:49 UTC
As far as I understand the issue, it's about installer not selecting Kazakh dictionaries and/or UI when installing on a system that has Kazakh language pack, but it's not the current one.

https://gerrit.libreoffice.org/c/core/+/98600
Comment 3 Baurzhan Muftakhidinov 2020-07-12 16:36:25 UTC
Hi Mike, thanks for prompt response!

Although, it should be LANG_KAZAKH, not LAND_KAZAK, please.

Best regards,
Comment 4 Baurzhan Muftakhidinov 2020-07-12 16:39:34 UTC
Ok, understood that LANG_KAZAK comes from Microsoft,

Thanks,
Comment 5 Commit Notification 2020-07-12 19:23:13 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c57865b79654ddd19caad12a892701ca50745800

tdf#134748: handle Kazakh language in langid_to_string

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Mike Kaganski 2020-07-12 19:24:27 UTC
Cherry-pick to 7-0 at https://gerrit.libreoffice.org/c/core/+/98466
Comment 7 Commit Notification 2020-07-13 00:43:46 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/d66e9c4680e86a0e2afe2606869db91d7159345e

tdf#134748: handle Kazakh language in langid_to_string

It will be available in 7.0.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.