tdf#134748: handle Kazakh language in langid_to_string

Change-Id: I8829597b7e90ea52dc4a4bdd88cd07730a0c4f12